Изменил заголовок сайта и добавил возможность переодить по записям блогга

--- a/day-15.html
+++ b/day-15.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Сайт начинающего верстальщика</title>
+    <title>Сайт Алексея Соловьева</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -21,12 +21,17 @@
           <a href="photo-3.html"><img src="files/preview-3.jpg" alt="Фоточка Кекса" width="115" height="77"></a>
         </p>
       </article>
+      <nav class="pagination">
+        <a href="day-14.html">&lt; Назад</a>
+        <a title="Это последний день">Вперёд &gt;</a>
+      </nav>
       <aside class="partnership">
         Тут могла быть ваша реклама
       </aside>
     </main>
     <footer>
-      Подвал сайта
+      IT-лицей(2012-2017), СПБПУ(2017-2022) <br>
+      Телефон: 8(917)-875-18-85
     </footer>
   </body>
 </html>
