--- a/day-1.html
+++ b/day-1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Дневник начинающего верстальщика</title>
+    <title>Сайт Алексея Соловьева</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -16,12 +16,17 @@
         <h1>День первый. Как я забыл покормить кота</h1>
         <p>Кто бы мог подумать, что семантика это так важно, мне срочно нужно было об этом поговорить. Взгляд упал на кота. Кот издал настойчивое «Мяу». И я понял — пришло время для первой записи в блог. И покормить кота.</p>
       </article>
+      <nav class="pagination">
+        <a title="Это первая день">&lt; Назад</a>
+        <a href="day-2.html">Вперёд &gt;</a>
+      </nav>
       <aside class="partnership">
         Тут могла быть ваша реклама
       </aside>
     </main>
     <footer>
-      Подвал сайта
+      IT-лицей(2012-2017), СПБПУ(2017-2022) <br>
+      Телефон: 8(917)-875-18-85
     </footer>
   </body>
 </html>
