--- a/day-14.html
+++ b/day-14.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Сайт начинающего верстальщика</title>
+    <title>Сайт Алексея Соловьева</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -25,12 +25,17 @@
         <p>Например, есть такой формат как JPEG:</p>
         <img src="files/instructor-keks.jpg" width="250" alt="Инструктор Кекс">
       </article>
+      <nav class="pagination">
+        <a href="day-13.html">&lt; Назад</a>
+        <a href="day-15.html">Вперёд &gt;</a>
+      </nav>
       <aside class="partnership">
         Тут могла быть ваша реклама
       </aside>
     </main>
     <footer>
-      Подвал сайта
+      IT-лицей(2012-2017), СПБПУ(2017-2022) <br>
+      Телефон: 8(917)-875-18-85
     </footer>
   </body>
 </html>
