--- a/day-2.html
+++ b/day-2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Дневник начинающего верстальщика</title>
+    <title>Сайт Алексея Соловьева</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -24,12 +24,17 @@
 
         <p>Желания учиться резко прибавилось.</p>
       </article>
+      <nav class="pagination">
+        <a href="day-1.html">&lt; Назад</a>
+        <a href="day-3.html">Вперёд &gt;</a>
+      </nav>
       <aside class="partnership">
         Тут могла быть ваша реклама
       </aside>
     </main>
     <footer>
-      Подвал сайта
+      IT-лицей(2012-2017), СПБПУ(2017-2022) <br>
+      Телефон: 8(917)-875-18-85
     </footer>
   </body>
 </html>
