--- a/day-9.html
+++ b/day-9.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Сайт начинающего верстальщика</title>
+    <title>Сайт Алексея Соловьева</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -20,12 +20,17 @@
 
         <p>«Какая <em>прекрасная</em> мысль», — подумал я, перевернулся на другой бок и заснул.</p>
       </article>
+      <nav class="pagination">
+        <a href="day-8.html">&lt; Назад</a>
+        <a href="day-10.html">Вперёд &gt;</a>
+      </nav>
       <aside class="partnership">
         Тут могла быть ваша реклама
       </aside>
     </main>
     <footer>
-      Подвал сайта
+      IT-лицей(2012-2017), СПБПУ(2017-2022) <br>
+      Телефон: 8(917)-875-18-85
     </footer>
   </body>
 </html>
