--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Сайт начинающего верстальщика</title>
+    <title>Сайт Алексея Соловьева</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
-      <h1 class="page-title">Сайт начинающего верстальщика</h1>
+      <h1 class="page-title">Сайт Алексея Соловьева</h1>
     </header>
     <main>
       <div class="avatar-container">
@@ -50,7 +50,8 @@
       </section>
     </main>
     <footer>
-      Подвал сайта
+      IT-лицей(2012-2017), СПБПУ(2017-2022) <br>
+      Телефон: 8(917)-875-18-85
     </footer>
   </body>
 </html>
