--- a/photo-1.html
+++ b/photo-1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Сайт начинающего верстальщика</title>
+    <title>Сайт Алексея Соловьева</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -18,7 +18,7 @@
           <figcaption>Бдительный инструктор Кекс следит за порядком.</figcaption>
         </figure>
         <nav class="pagination">
-          <a>&lt; Назад</a>
+          <a title="Это первая фотография">&lt; Назад</a>
           <a href="photo-2.html">Вперёд &gt;</a>
         </nav>
       </article>
@@ -27,7 +27,8 @@
       </aside>
     </main>
     <footer>
-      Подвал сайта
+      IT-лицей(2012-2017), СПБПУ(2017-2022) <br>
+      Телефон: 8(917)-875-18-85
     </footer>
   </body>
 </html>
