--- a/photo-3.html
+++ b/photo-3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Сайт начинающего верстальщика</title>
+    <title>Сайт Алексея Соловьева</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -19,7 +19,7 @@
         </figure>
         <nav class="pagination">
           <a href="photo-2.html">&lt; Назад</a>
-          <a title="Фото в галерее закончились">Вперёд &gt;</a>
+          <a title="Это последняя фотография">Вперёд &gt;</a>
         </nav>
       </article>
       <aside class="partnership">
@@ -27,7 +27,8 @@
       </aside>
     </main>
     <footer>
-      Подвал сайта
+      IT-лицей(2012-2017), СПБПУ(2017-2022) <br>
+      Телефон: 8(917)-875-18-85
     </footer>
   </body>
 </html>
